# bioclaw

./: .env.example  .gitignore  README.md  bioclaw.yaml  pyproject.toml
src/bioclaw/: __init__.py  __main__.py
src/bioclaw/agent/: claude_client.py  loop.py  memory.py  prompts.py
src/bioclaw/cli/: app.py  chat.py  jobs.py  run.py  serve.py
src/bioclaw/config/: settings.py
src/bioclaw/jobs/: executor.py  manager.py  models.py  store.py
src/bioclaw/server/: app.py  ws.py
src/bioclaw/server/routes/: chat.py  files.py  jobs.py  tools.py
src/bioclaw/skills/: base.py  registry.py  types.py
src/bioclaw/skills/common/: database_query.py  file_converter.py
src/bioclaw/skills/drugdiscovery/: admet_predictor.py  compound_search.py  mol_visualizer.py  molecular_docking.py  molecular_properties.py  pdb_converter.py  qsar_model.py  scaffold_analysis.py  similarity_search.py
src/bioclaw/skills/ngs/: bam_stats.py  diff_expression.py  quality_control.py  read_alignment.py  rnaseq_pipeline.py  variant_calling.py
src/bioclaw/storage/: database.py  results.py
src/bioclaw/utils/: logging.py  validators.py
tests/: conftest.py  test_base_tool.py  test_config.py  test_job_models.py  test_memory.py  test_registry.py  test_types.py  test_validators.py
web/: package.json  tsconfig.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/jobs/: page.tsx
web/src/app/settings/: page.tsx
web/src/components/chat/: ChatPanel.tsx  MessageBubble.tsx  ToolCallCard.tsx
web/src/components/jobs/: JobList.tsx  JobProgress.tsx
web/src/components/ngs/: QCReport.tsx  (+2 more)
(+2 files in other folders)
