[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioclaw"
version = "0.1.0"
description = "Bioinformatics AI agent platform for drug discovery and NGS analysis"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "anthropic>=0.39.0",
    "click>=8.1",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiosqlite>=0.20.0",
    "numpy>=1.26",
    "pandas>=2.1",
]

[project.optional-dependencies]
drugdiscovery = [
    "rdkit",
    "pubchempy>=1.0.4",
    "chembl-webresource-client>=0.10",
    "meeko>=0.5",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "plotly>=5.18",
    "matplotlib>=3.8",
]
ngs = [
    "pysam>=0.22",
    "pydeseq2>=0.4",
]
all = ["bioclaw[drugdiscovery,ngs]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
]

[project.scripts]
bioclaw = "bioclaw.cli.app:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/bioclaw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
